syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc GetRow (RowIdRequest) returns (DataRowReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message containing the user's name.
message RowIdRequest {
  int32 Id = 1;
}

// The response message containing the greetings.
message DataRowReply {
  repeated string Value = 1;
}
